// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard: Introduction JavaScript renders 1`] = `
Array [
  <h2
    id="javascript"
  >
    JavaScript
  </h2>,
  <p>
    To add charts to your project you need to include a dashboard script to make it run properly. Add the dashboard script below the 
    <code
      className="code-tags code-tags-secondary"
    >
      scripts
    </code>
     and at the bottom of your 
    <code
      className="code-tags code-tags-primary"
    >
      &lt;body&gt;
    </code>
     tag like this: 
  </p>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;script src="http://localhost/TEST/scripts/dg.js"&gt;&lt;/script&gt;
                

                &lt;script src="http://localhost/TEST/scripts/dg-dashboard.js"&gt;&lt;/script&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Dashboard: Introduction QuickStart renders 1`] = `
Array [
  <h3
    id="quick-start"
  >
    Quick start
  </h3>,
  <p>
    To quickly add the dashboard theme to your project, include the snippets below in your project.
  </p>,
]
`;

exports[`Dashboard: Introduction renders 1`] = `
Array [
  <h2
    id="introduction"
  >
    Introduction
  </h2>,
  <p
    className="lead"
  >
    We are using 
    <a
      href="https://www.chartjs.org/"
      rel="noopener noreferrer"
      target="_blank"
    >
      chart.js
    </a>
     to generate the charts. Our script is mainly just a wrapper around that library to add the correct styling etc.
  </p>,
  <p>
    Most options and settings available in the chart.js documentation will be available.
  </p>,
  <p>
    For now, the following chart types are available:
  </p>,
  <ul>
    <li>
      <code
        className="code-tags code-tags-secondary"
      >
        "line"
      </code>
    </li>
    <li>
      <code
        className="code-tags code-tags-secondary"
      >
        "bar"/"horizontalBar"
      </code>
    </li>
    <li>
      <code
        className="code-tags code-tags-secondary"
      >
        "pie"/"doughnut"
      </code>
    </li>
  </ul>,
  <h3
    id="quick-start"
  >
    Quick start
  </h3>,
  <p>
    To quickly add the dashboard theme to your project, include the snippets below in your project.
  </p>,
  <h2
    id="javascript"
  >
    JavaScript
  </h2>,
  <p>
    To add charts to your project you need to include a dashboard script to make it run properly. Add the dashboard script below the 
    <code
      className="code-tags code-tags-secondary"
    >
      scripts
    </code>
     and at the bottom of your 
    <code
      className="code-tags code-tags-primary"
    >
      &lt;body&gt;
    </code>
     tag like this: 
  </p>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;script src="http://localhost/TEST/scripts/dg.js"&gt;&lt;/script&gt;
                

                &lt;script src="http://localhost/TEST/scripts/dg-dashboard.js"&gt;&lt;/script&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;
